# MetaChatBot

./: .gitignore  RAG_Scrapper.py  readme.MD
backend/: pyproject.toml
backend/myproject/: abc.xlsx  db.sqlite3  generate_excel.py  requirements.txt
backend/myproject/api/: RAG_2.py  RAG_Scrapper.py  models.py  serializers.py  urls.py  views.py
backend/myproject/api/migrations/: 0001_initial.py  0002_chatsession_vector_db_name.py
backend/myproject/dbs/db_2e82bf83/: chroma.sqlite3
backend/myproject/dbs/db_2fcc4214/: chroma.sqlite3
backend/myproject/dbs/db_332c773c/: chroma.sqlite3
backend/myproject/dbs/db_3535d699/: chroma.sqlite3
backend/myproject/dbs/db_4ba242b3/: chroma.sqlite3
backend/myproject/dbs/db_69ce6e21/: chroma.sqlite3
backend/myproject/dbs/db_7bf39fff/: chroma.sqlite3
backend/myproject/dbs/db_91fe1b81/: chroma.sqlite3
backend/myproject/dbs/db_b0d8f2ac/: chroma.sqlite3
backend/myproject/dbs/db_b29b57c2/: chroma.sqlite3
backend/myproject/dbs/db_bc0c7404/: chroma.sqlite3
backend/myproject/dbs/db_db2d4ab6/: chroma.sqlite3
backend/myproject/dbs/db_f6890f83/: chroma.sqlite3
backend/myproject/myproject/: settings.py  urls.py
frontend/Searching-and-Scraphing/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/Searching-and-Scraphing/src/: App.jsx
frontend/Searching-and-Scraphing/src/components/chatbot/Home/: Home.css  Home.jsx
frontend/Searching-and-Scraphing/src/components/chatbot/SidebarandChatbot/: SidebarandHome.jsx
frontend/Searching-and-Scraphing/src/components/chatbot/chatbot/: Chatbot.jsx  (+1 more)
(+2 files in other folders)
